methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:6: error: not found: type boolean
  var piste : boolean = false
              ^