methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	if (isFacingWall())
  	return false
  
  var piste : boolean = false
  forward()
  if(getGroundColor()==Color.green)
  	piste=true
  
  return piste
}